--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: My First Github Actions
 on: [push]
 jobs:
-  print-hello-world:
+  project-building:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -9,6 +9,6 @@ jobs:
         with:
           node-version: 16
       - name: Build the Project
-        run: npx run build
+        run: npm run build
       - name: Setup Finished
         run: echo "Successfully build the project"
