--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "typescript": "^4.6.4",
+    "vercel": "^27.4.0",
     "vite": "^3.0.0"
   }
 }
+
