--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,5 +19,7 @@ jobs:
           cd .vercel
           touch project.json
           echo "{"orgId":"GsufK1gEBBwXPi8gZ1oReqJX","projectId":"prj_X5bq5NcUme2X6Xaahb0tVLSdgDz7"}" > project.json
+      - name: Deploying the project
+        run: npm deploy
       - name: Setup Finished
         run: echo "Successfully build the project"
