--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VERCEL_ID: ${{secrets.VERCEL_ID}}
-      VERCEL_PROJ_ID: ${{secrets.VERCEL_PROJ_ID}}
+      VERCEL_PROJ_ID: ${{secrets.VERCEL_PROJECT_ID}}
       VERCEL_ORG_ID: ${{secrets.VERCEL_ORG_ID}}
     steps:
       - uses: actions/checkout@v3
@@ -22,7 +22,7 @@ jobs:
           mkdir .vercel
           cd .vercel
           touch project.json
-          echo "{\"projectId\":\"$VERCEL_PROJ_ID\",\"orgId\":\"$VERCEL_ORG_ID\"}" > project.json
+          echo "{\"projectId\":\"$VERCEL_PROJECT_ID\",\"orgId\":\"$VERCEL_ORG_ID\"}" > project.json
       - name: Deploying the project
         run: yarn deploy
       - name: Setup Finished
