--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: My First Github Actions
 on: [push]
 jobs:
-  project-building:
+  project-build:
     runs-on: ubuntu-latest
     env:
       VERCEL_PROJECT_ID: ${{secrets.VERCEL_PROJECT_ID}}
